Finshed and uploaded site.

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Osenburg Electric</a>
+      <a href="index.html" class="navbar-brand">Osenburg Electric, Inc.</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -85,71 +85,6 @@
     </div>
   </section>
 
-  <!-- ICON BOXES -->
-  <!-- <section id="icon-boxes" class="p-5">
-    <div class="container">
-      <div class="row mb-4">
-        <div class="col-md-4">
-          <div class="card bg-danger text-white text-center">
-            <div class="card-body">
-              <i class="fas fa-building fa-3x"></i>
-              <h3>Sample Heading</h3>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card bg-dark text-white text-center">
-            <div class="card-body">
-              <i class="fas fa-bullhorn fa-3x"></i>
-              <h3>Sample Heading</h3>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card bg-danger text-white text-center">
-            <div class="card-body">
-              <i class="fas fa-comments fa-3x"></i>
-              <h3>Sample Heading</h3>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row mb-4">
-        <div class="col-md-4">
-          <div class="card bg-dark text-white text-center">
-            <div class="card-body">
-              <i class="fas fa-box fa-3x"></i>
-              <h3>Sample Heading</h3>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card bg-danger text-white text-center">
-            <div class="card-body">
-              <i class="fas fa-credit-card fa-3x"></i>
-              <h3>Sample Heading</h3>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card bg-dark text-white text-center">
-            <div class="card-body">
-              <i class="fas fa-coffee fa-3x"></i>
-              <h3>Sample Heading</h3>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, adipisci.
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
   <!-- TESTIMONIALS -->
   <section id="testimonials" class="p-4 bg-dark text-white">
     <div class="container">
@@ -160,30 +95,33 @@
             <div>
               <blockquote class="blockquote">
                 <p class="mb-0">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quaerat.
+                  The crew at Osenburg Electric are dependable, knowledgeable, and their work is nothing short of perfect.
                 </p>
-                <footer class="blockquote-footer">John Doe From
-                  <cite title="Company 1">Company 1</cite>
+                <footer class="blockquote-footer">Angela
+                  <br>
+                  <cite title="QuoteDate">September 16, 2018</cite>
                 </footer>
               </blockquote>
             </div>
             <div>
               <blockquote class="blockquote">
                 <p class="mb-0">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quaerat.
+                  Dependable service, always arrives on time and always willing to work around my schedule.
                 </p>
-                <footer class="blockquote-footer">Sam Smith From
-                  <cite title="Company 2">Company 2</cite>
+                <footer class="blockquote-footer">Mary
+                  <br>
+                  <cite title="Company 2">August 14, 2018</cite>
                 </footer>
               </blockquote>
             </div>
             <div>
               <blockquote class="blockquote">
                 <p class="mb-0">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quaerat.
+                  Osenburg Electric is the best! They got my pool up and running just in time for the season.
                 </p>
-                <footer class="blockquote-footer">Meghan Williams From
-                  <cite title="Company 3">Company 3</cite>
+                <footer class="blockquote-footer">Laurie
+                  <br>
+                  <cite title="Company 3">September 4, 2018</cite>
                 </footer>
               </blockquote>
             </div>
@@ -199,7 +137,7 @@
       <div class="row">
         <div class="col">
           <p>Copyright &copy;
-            <span id="year"></span> Osenburg Electric</p>
+            <span id="year"></span> Osenburg Electric, Inc.</p>
         </div>
       </div>
     </div>
