--- a/commercial.html
+++ b/commercial.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
         <div class="container">
-            <a href="index.html" class="navbar-brand">Osenburg Electric</a>
+            <a href="index.html" class="navbar-brand">Osenburg Electric, Inc.</a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -48,6 +48,7 @@
             <div class="row">
                 <div class="col-md-6 m-auto text-center">
                     <h1>Our Services</h1>
+                    <p>We are here to help you with all of your electrical needs and projects</p>
                 </div>
             </div>
         </div>
@@ -64,22 +65,41 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Businesses</h4>
-                            <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, quis.</p>
+                            <p class="card-text">Always a master electrician providing prompt service for all your electrical
+                                needs at reasonable prices.</p>
                             <ul class="list-group">
                                 <li class="list-group-item">
-                                    <i class="fas fa-check"></i> Feature One
+                                    <i class="fas fa-check"></i> Electrical services single and three phase
                                 </li>
                                 <li class="list-group-item">
-                                    <i class="fas fa-check"></i> Feature Two
+                                    <i class="fas fa-check"></i> Office and retail space build outs and alterations
                                 </li>
                                 <li class="list-group-item">
-                                    <i class="fas fa-check"></i> Feature Three
+                                    <i class="fas fa-check"></i> Warehouse and storage spaces
                                 </li>
                                 <li class="list-group-item">
-                                    <i class="fas fa-check"></i> Feature Four
+                                    <i class="fas fa-check"></i> New and retrofit LED lighting
                                 </li>
                                 <li class="list-group-item">
-                                    <i class="fas fa-check"></i> Feature Five
+                                    <i class="fas fa-check"></i> HVAC feeders and controls
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Refrigeration equipment and control
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Outdoor security lighting
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Cable/Phone/Data/Networking
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Equipment wiring and automation
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Healthcare facilities
+                                </li>
+                                <li class="list-group-item">
+                                    <i class="fas fa-check"></i> Solar installations
                                 </li>
                             </ul>
                             <a href="contact.html" class="btn btn-danger btn-block mt-2">Contact Us</a>
@@ -104,7 +124,7 @@
             <div class="row">
                 <div class="col">
                     <p>Copyright &copy;
-                        <span id="year"></span> Osenburg Electric</p>
+                        <span id="year"></span> Osenburg Electric, Inc.</p>
                 </div>
             </div>
         </div>
