--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
   <!-- SHOWCASE SLIDER -->
   <section id="showcase">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide hidden-md-down" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -56,8 +56,6 @@
           <div class="container">
             <div class="carousel-caption d-none d-sm-block text-center mb-5">
               <h1 class="display-3">Residential</h1>
-              <!-- <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
-                ratione quod aliquid inventore vero perspiciatis.</p> -->
               <a href="residential.html" class="btn btn-primary btn-lg">Our Services</a>
             </div>
           </div>
@@ -67,8 +65,6 @@
           <div class="container">
             <div class="carousel-caption d-none d-sm-block mb-5">
               <h1 class="display-3 text-mute ">Commercial</h1>
-              <!-- <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam vel ullam deleniti reiciendis
-                ratione quod aliquid inventore vero perspiciatis.</p> -->
               <a href="commercial.html" class="btn btn-primary btn-lg">Our Services</a>
             </div>
           </div>
@@ -100,11 +96,6 @@
           <h3> Commercial</h3>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
         </div>
-        <!-- <div class="col-md-4 mb-4 text-center">
-          <a href="services.html"><i class="fas fa-sun fa-3x mb-2"></i></a>
-          <h3>Solar</h3>
-          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, veniam.</p>
-        </div> -->
       </div>
     </div>
   </section>
@@ -127,9 +118,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 align-self-center">
-          <h3>Lorem Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate eveniet blanditiis incidunt iusto corrupti
-            illum cum laudantium ex sequi amet.</p>
+          <h3>About Us</h3>
+          <p>Completing electrical projects large and small for customers in the Baltimore Metopolitan Area.</p>
           <a href="about.html" class="btn btn-outline-danger btn-lg">Learn More</a>
         </div>
         <div class="col-md-6">
@@ -231,7 +221,7 @@
       <div class="row">
         <div class="col">
           <p>Copyright &copy;
-            <span id="year"></span> Osenburg Electric</p>
+            <span id="year"></span> Osenburg Electric, Inc.</p>
         </div>
       </div>
     </div>
