--- a/residential.html
+++ b/residential.html
@@ -16,7 +16,7 @@
 <body>
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container">
-      <a href="index.html" class="navbar-brand">Osenburg Electric</a>
+      <a href="index.html" class="navbar-brand">Osenburg Electric, Inc.</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -65,7 +65,9 @@
             </div>
             <div class="card-body">
               <h4 class="card-title">Homes</h4>
-              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, quis.</p>
+              <p class="card-text">Always a master electrician providing prompt service for all your electrical needs at
+                reasonable prices.
+              </p>
               <ul class="list-group">
                 <li class="list-group-item">
                   <i class="fas fa-check"></i> New Homes and Additions
@@ -89,6 +91,18 @@
                   <i class="fas fa-check"></i> Audio/Visual Systems
                 </li>
                 <li class="list-group-item">
+                  <i class="fas fa-check"></i> Service upgrades
+                </li>
+                <li class="list-group-item">
+                  <i class="fas fa-check"></i> Back-up generator power
+                </li>
+                <li class="list-group-item">
+                  <i class="fas fa-check"></i> Cable and Data wiring
+                </li>
+                <li class="list-group-item">
+                  <i class="fas fa-check"></i> Heating and A/C
+                </li>
+                <li class="list-group-item">
                   <i class="fas fa-check"></i> Small jobs, Fans/Lighting/Receptacles
                 </li>
               </ul>
@@ -98,37 +112,6 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-md-6">
-          <div class="card text-center">
-            <div class="card-header bg-dark text-white">
-              <h3>Commercial Services</h3>
-            </div>
-            <div class="card-body">
-              <h4 class="card-title">Businesses</h4>
-              <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut, quis.</p>
-              <ul class="list-group">
-                <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature One
-                </li>
-                <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Two
-                </li>
-                <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Three
-                </li>
-                <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Four
-                </li>
-                <li class="list-group-item">
-                  <i class="fas fa-check"></i> Feature Five
-                </li>
-              </ul>
-              <a href="contact.html" class="btn btn-danger btn-block mt-2">Contact Us</a>
-            </div>
-            <div class="card-footer text-muted">
-            </div>
-          </div>
-        </div> -->
       </div>
     </div>
   </section>
@@ -145,16 +128,14 @@
               <div class="card-header">
                 <h5 class="mb-0">
                   <a href="#collapseOne" data-toggle="collapse" data-parent="accordion">
-                    Question One
+                    Are you licensed and insured?
                   </a>
                 </h5>
               </div>
 
               <div id="collapseOne" class="collapse">
                 <div class="card-body">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt ea officiis distinctio exercitationem dolor minus placeat
-                  amet commodi, ab a perspiciatis officia nobis reiciendis numquam totam repudiandae molestias nulla, quod
-                  voluptatibus modi rerum laboriosam tenetur. Nihil, soluta eaque? Minima, deserunt.
+                  Yes. We have MD state and local jurisdiction licenses as well as general liability and workers comp insurance.
                 </div>
               </div>
             </div>
@@ -163,16 +144,14 @@
               <div class="card-header">
                 <h5 class="mb-0">
                   <a href="#collapseTwo" data-toggle="collapse" data-parent="accordion">
-                    Question Two
+                    Do you give free estimates?
                   </a>
                 </h5>
               </div>
 
               <div id="collapseTwo" class="collapse">
                 <div class="card-body">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt ea officiis distinctio exercitationem dolor minus placeat
-                  amet commodi, ab a perspiciatis officia nobis reiciendis numquam totam repudiandae molestias nulla, quod
-                  voluptatibus modi rerum laboriosam tenetur. Nihil, soluta eaque? Minima, deserunt.
+                  Yes. We will work with your schedule to set up a time to go over your project.
                 </div>
               </div>
             </div>
@@ -181,16 +160,14 @@
               <div class="card-header">
                 <h5 class="mb-0">
                   <a href="#collapseThree" data-toggle="collapse" data-parent="accordion">
-                    Question Three
+                    Do we warranty our work?
                   </a>
                 </h5>
               </div>
 
               <div id="collapseThree" class="collapse">
                 <div class="card-body">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt ea officiis distinctio exercitationem dolor minus placeat
-                  amet commodi, ab a perspiciatis officia nobis reiciendis numquam totam repudiandae molestias nulla, quod
-                  voluptatibus modi rerum laboriosam tenetur. Nihil, soluta eaque? Minima, deserunt.
+                  Yes. Materials supplied by us and labor for one year from date of installation.
                 </div>
               </div>
             </div>
@@ -202,58 +179,21 @@
               <div class="card-header">
                 <h5 class="mb-0">
                   <a href="#collapseFour" data-toggle="collapse" data-parent="accordion">
-                    Question Four
+                    Do we do small jobs?
                   </a>
                 </h5>
               </div>
 
               <div id="collapseFour" class="collapse">
                 <div class="card-body">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt ea officiis distinctio exercitationem dolor minus placeat
-                  amet commodi, ab a perspiciatis officia nobis reiciendis numquam totam repudiandae molestias nulla, quod
-                  voluptatibus modi rerum laboriosam tenetur. Nihil, soluta eaque? Minima, deserunt.
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="card-header">
-                <h5 class="mb-0">
-                  <a href="#collapseFive" data-toggle="collapse" data-parent="accordion">
-                    Question Five
-                  </a>
-                </h5>
-              </div>
-
-              <div id="collapseFive" class="collapse">
-                <div class="card-body">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt ea officiis distinctio exercitationem dolor minus placeat
-                  amet commodi, ab a perspiciatis officia nobis reiciendis numquam totam repudiandae molestias nulla, quod
-                  voluptatibus modi rerum laboriosam tenetur. Nihil, soluta eaque? Minima, deserunt.
-                </div>
-              </div>
-            </div>
-
-            <div class="card">
-              <div class="card-header">
-                <h5 class="mb-0">
-                  <a href="#collapseSix" data-toggle="collapse" data-parent="accordion">
-                    Question Six
-                  </a>
-                </h5>
-              </div>
-
-              <div id="collapseSix" class="collapse">
-                <div class="card-body">
-                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt ea officiis distinctio exercitationem dolor minus placeat
-                  amet commodi, ab a perspiciatis officia nobis reiciendis numquam totam repudiandae molestias nulla, quod
-                  voluptatibus modi rerum laboriosam tenetur. Nihil, soluta eaque? Minima, deserunt.
+                  Yes. We do jobs of all sizes.
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
   </section>
 
@@ -263,7 +203,7 @@
       <div class="row">
         <div class="col">
           <p>Copyright &copy;
-            <span id="year"></span> Osenburg Electric</p>
+            <span id="year"></span> Osenburg Electric, Inc.</p>
         </div>
       </div>
     </div>
