--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a href="index.html" class="navbar-brand">Osenburg Electric, Inc.</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
@@ -28,7 +28,7 @@
             <a href="index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item active">
-            <a href="about.html" class="nav-link">About Us</a>
+            <a href="about.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
             <a href="residential.html" class="nav-link">Residential</a>
